@@ -41,4 +41,9 @@ git clone git://github.com/testing-cabal/extras "$WORKDIR/extras"
 rm -rf "$WORKDIR/extras/.git"
 rsync -avz --delete "$WORKDIR/extras/" "$LIBDIR/extras/"
 
+echo "Updating mimeparse..."
+svn co http://mimeparse.googlecode.com/svn/trunk/ "$WORKDIR/mimeparse"
+rm -rf "$WORKDIR/mimeparse/.svn"
+rsync -avz --delete "$WORKDIR/mimeparse/" "$LIBDIR/mimeparse/"
+
 rm -rf "$WORKDIR"
